fix: fix pixelperfect shift in page-news section for <= 414px

--- a/src/scss/index/page-news.scss
+++ b/src/scss/index/page-news.scss
@@ -33,7 +33,6 @@
 
     h3 {
       margin-top: 0;
-      font-size: 30px;
     }
 
     .news-footer {
@@ -60,6 +59,16 @@
     .btn {
       width: 135px;
       padding: 16px 30px;
+    }
+  }
+}
+
+@media (width > 414px) {
+  .page-news {
+    .news-item {
+      h3 {
+        font-size: 30px;
+      }
     }
   }
 }
